<resources>
    <string name="app_name">Register App</string>
    <string name="registration_form">Registration Form</string>
    <string name="hello_there">Hello There!</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="country">Country</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_data">Your data</string>
</resources>
